# ompi

./: .gitignore  VERSION
config/: ompi_config_files.m4  ompi_configure_options.m4  ompi_setup_mpi_fortran.m4  opal_configure_options.m4
docs/developers/: bindings.rst
ompi/: Makefile.am  abi_comm_rank.c
ompi/class/: Makefile.am
ompi/communicator/: comm.c
ompi/datatype/: Makefile.am  ompi_datatype.h  ompi_datatype_create.c  ompi_datatype_create_contiguous.c  ompi_datatype_create_darray.c  ompi_datatype_create_indexed.c  ompi_datatype_create_struct.c  ompi_datatype_create_subarray.c  ompi_datatype_create_vector.c  ompi_datatype_internal.h  ompi_datatype_module.c  ompi_datatype_typesig.c
ompi/include/: mpi.h.in
ompi/mca/coll/: coll.h
ompi/mca/coll/accelerator/: Makefile.am
ompi/mca/coll/base/: coll_base_agree_noft.c  coll_base_allgatherv.c  coll_base_allreduce.c  coll_base_alltoallv.c  coll_base_functions.h  coll_base_reduce.c  coll_base_reduce_scatter.c  coll_base_reduce_scatter_block.c
ompi/mca/coll/basic/: coll_basic.h  coll_basic_allgatherv.c  coll_basic_alltoallv.c  coll_basic_alltoallw.c  coll_basic_gatherv.c  coll_basic_neighbor_allgatherv.c  coll_basic_neighbor_alltoallv.c  coll_basic_neighbor_alltoallw.c  coll_basic_reduce_scatter.c  coll_basic_scatterv.c
ompi/mca/coll/demo/: coll_demo.h  coll_demo_allgatherv.c  coll_demo_alltoallv.c  coll_demo_alltoallw.c  coll_demo_gatherv.c  coll_demo_reduce_scatter.c  coll_demo_scatterv.c
ompi/mca/coll/han/: coll_han.h  coll_han_algorithms.h  coll_han_allreduce.c  coll_han_bcast.c  coll_han_dynamic.c  coll_han_gatherv.c  coll_han_reduce.c  coll_han_scatterv.c
ompi/mca/coll/hcoll/: coll_hcoll.h  coll_hcoll_ops.c
ompi/mca/coll/inter/: coll_inter.h  coll_inter_allgatherv.c  coll_inter_gatherv.c  coll_inter_scatterv.c
ompi/mca/coll/libnbc/: coll_libnbc.h  nbc_iallgatherv.c  nbc_iallreduce.c  nbc_ialltoallv.c  nbc_ialltoallw.c  nbc_igatherv.c  nbc_ineighbor_allgatherv.c  nbc_ineighbor_alltoallv.c  nbc_ineighbor_alltoallw.c  nbc_ireduce.c  nbc_ireduce_scatter.c  nbc_iscatterv.c
ompi/mca/coll/monitoring/: coll_monitoring.h  coll_monitoring_allgatherv.c  coll_monitoring_alltoallv.c  coll_monitoring_alltoallw.c  coll_monitoring_gatherv.c  coll_monitoring_neighbor_allgatherv.c  coll_monitoring_neighbor_alltoallv.c  coll_monitoring_neighbor_alltoallw.c  coll_monitoring_reduce_scatter.c  coll_monitoring_scatterv.c
ompi/mca/coll/self/: coll_self.h  coll_self_allgatherv.c  coll_self_alltoallv.c  coll_self_alltoallw.c  coll_self_gatherv.c  coll_self_reduce_scatter.c  coll_self_scatterv.c
ompi/mca/coll/sync/: coll_sync.h  coll_sync_gatherv.c  coll_sync_reduce_scatter.c  coll_sync_scatterv.c
ompi/mca/coll/tuned/: coll_tuned_allgatherv_decision.c  coll_tuned_alltoallv_decision.c  coll_tuned_decision_dynamic.c  coll_tuned_decision_fixed.c  coll_tuned_reduce_scatter_decision.c
ompi/mca/coll/ucc/: coll_ucc.h  coll_ucc_allgatherv.c  coll_ucc_alltoallv.c  coll_ucc_gatherv.c  coll_ucc_reduce_scatter.c  coll_ucc_scatterv.c
ompi/mca/fcoll/dynamic_gen2/: fcoll_dynamic_gen2_file_write_all.c
ompi/mca/fcoll/vulcan/: fcoll_vulcan_file_write_all.c
ompi/mca/hook/comm_method/: hook_comm_method_fns.c
ompi/mca/io/ompio/: io_ompio.c
ompi/mca/osc/ucx/: osc_ucx_component.c
ompi/mca/pml/base/: pml_base_sendreq.h
ompi/mca/pml/ob1/: pml_ob1_hdr.h  pml_ob1_isend.c  pml_ob1_recvfrag.c  pml_ob1_recvreq.c  pml_ob1_sendreq.c
ompi/mca/sharedfp/individual/: sharedfp_individual_collaborate_data.c
ompi/mpi/bindings/: bindings.py  bindings.py.in
ompi/mpi/bindings/ompi_bindings/: c.py  c_type.py  code.py  compiler.py  compiler.py.in  consts.py  fortran.py  fortran_type.py  util.py
ompi/mpi/c/: Makefile.am  abi.c  abi.h  abi_comm_rank.c  abi_comm_size.c  abi_send.c  add_error_class.c.in  add_error_code.c.in  add_error_string.c.in  allgather.c.in  allgather_init.c.in  allgatherv.c  allgatherv.c.in  allgatherv_init.c  allgatherv_init.c.in  allreduce_init.c.in  alltoall_init.c.in  alltoallv.c  alltoallv.c.in  alltoallv_init.c  alltoallv_init.c.in  alltoallw.c  alltoallw_init.c  alltoallw_init.c.in  bcast.c.in  bindings.h  buffer_attach.c.in  buffer_detach.c.in  cancel.c.in  cart_create.c.in  cart_map.c.in  cart_rank.c.in  cart_sub.c.in  comm_get_info.c.in  comm_join.c.in  comm_spawn.c.in  comm_spawn_multiple.c.in  dist_graph_create.c.in  dist_graph_create_adjacent.c.in  dist_graph_neighbors.c.in  (+163 more)
ompi/mpi/fortran/: generate_bindings.py
ompi/mpi/fortran/mpif-h/: type_get_contents_f.c  type_get_envelope_f.c  type_get_extent_f.c
ompi/mpi/fortran/use-mpi-f08/: Makefile.am  Makefile.prototype_files  allgather_init_ts.c.in  allgatherv_init_ts.c.in  allgatherv_ts.c.in  allreduce_init_ts.c.in  allreduce_ts.c.in  alltoall_init_ts.c.in  alltoallw_init_ts.c.in  bcast_ts.c.in  exscan_init_ts.c.in  free_mem_ts.c.in  gatherv_ts.c.in  generate_bindings.py  generate_bindings.py.in  get_ts.c.in  ineighbor_allgather_ts.c.in  ineighbor_allgatherv_ts.c.in  interface.in  interface.json  iscatterv_ts.c.in  isendrecv_replace_ts.c.in  neighbor_allgather_ts.c.in  neighbor_allgatherv_ts.c.in  neighbor_alltoallw_init_ts.c.in  psend_init_f08.F90  recv_f08.in  send_f08.in  sendrecv_replace_ts.c.in  waitall_f08.in  win_shared_query.c.in
ompi/mpi/fortran/use-mpi-f08/base/: Makefile.am  bigcount.h  generate_bindings.h
ompi/mpi/fortran/use-mpi-f08/mod/: Makefile.am  mpi-f08-interfaces.h.in
ompi/mpi/fortran/use-mpi-f08/profile/: Makefile.am
ompi/request/: request.h
ompi/util/: count_disp_array.h
opal/datatype/: opal_datatype.h
opal/mca/btl/rsm/: Cargo.toml  Makefile.am  block.rs  block_store.rs  component.c  configure.m4  endpoint.rs  fifo.rs  globals.rs  lib.rs  local_data.rs  modex.rs  module.rs  module_data.rs  opal.c  opal.h  proc_info.rs  shared.rs  shared_mem.rs  shmem.rs
opal/mca/btl/sm/: btl_sm_component.c
oshmem/mca/scoll/mpi/: scoll_mpi_ops.c
test/datatype/: Makefile.am  matching.c
